# image_background_remover

img_bg_remover/: pyproject.toml
img_bg_remover/img_bg_remover/: main.py
