[tool.poetry]
name = "img-bg-remover"
version = "0.1.0"
description = ""
authors = ["Ihor Siedielnikov <sisemail92@gmail.com>"]
readme = "README.md"
packages = [{include = "img_bg_remover"}]

[tool.poetry.dependencies]
python = "^3.11"
easygui = "^0.98.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
